# cpp-bitmap-lib

./: .gitignore  CMakeLists.txt  README.md  cmake-script.sh  run.sh
include/: bitmap.hpp  pixelrgb.hpp
src/: bitmap.cpp  main.cpp  pixelrgb.cpp
